<resources>
    <string name="app_name">Lizaveta_Hurskaya_wt_15_30</string>
    <string name="Clear">C</string>
    <string name="eq">=</string>
    <string name="dot">.</string>
    <string name="zero">0</string>
    <string name="plus">+</string>
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="seven">7</string>
    <string name="minus">-</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="mul">*</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="div">/</string>
    <string name="percent">%</string>
    <string name="display">%0$f</string>
    <string name="resultDisplay">= %4.4$f</string>
    <string name="sqrt">\u221a</string>
</resources>