<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/display"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="start"
                    android:lines="2"
                    android:gravity="bottom|end"
                    android:padding="16dp"
                    android:text="@string/display"
                    android:textColor="@android:color/white"
                    android:textSize="56sp"
                    app:layout_constraintBottom_toTopOf="@id/resultDisplay"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/resultDisplay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:padding="16dp"
                    android:text="@string/resultDisplay"
                    android:textColor="@android:color/secondary_text_dark"
                    android:textSize="42sp"
                    tools:layout_editor_absoluteX="155dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_weight="1">

                    <Button
                        android:id="@+id/backspace"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.25"
                        android:text="@string/Clear"
                        android:textSize="24sp"/>

                    <Button
                        android:id="@+id/percent"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.25"
                        android:text="@string/percent"
                        android:textSize="24sp"
                        />

                    <Button
                        android:id="@+id/sqrt"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.25"
                        android:text="@string/sqrt"
                        android:textSize="24sp"
                        />

                    <Button
                        android:id="@+id/divide"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.25"
                        android:text="@string/div"
                        android:textSize="24sp"
                        />
                </TableRow>


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    android:layout_weight="1">

                    <Button
                        android:id="@+id/b1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.25"
                        android:text="@string/one"
                        android:textSize="24sp"
                        />

                    <Button
                        android:id="@+id/b2"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.25"
                        android:text="@string/two"
                        android:textSize="24sp"/>

                    <Button
                        android:id="@+id/b3"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.25"
                        android:text="@string/three"
                        android:textSize="24sp"
                        />

                    <Button
                        android:id="@+id/multiply"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.25"
                        android:text="@string/mul"
                        android:textSize="24sp"
                        />
                </TableRow>


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    android:layout_weight="1">

                    <Button
                        android:id="@+id/b4"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.25"
                        android:text="@string/four"
                        android:textSize="24sp"
                        />

                    <Button
                        android:id="@+id/b5"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.25"
                        android:text="@string/five"
                        android:textSize="24sp"
                        />

                    <Button
                        android:id="@+id/b6"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.25"
                        android:text="@string/six"
                        android:textSize="24sp"
                        />

                    <Button
                        android:id="@+id/minus"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.25"
                        android:text="@string/minus"
                        android:textSize="24sp"
                        />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    android:layout_weight="1">

                    <Button
                        android:id="@+id/b7"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.25"
                        android:text="@string/seven"
                        android:textSize="24sp"
                        />

                    <Button
                        android:id="@+id/b8"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.25"
                        android:text="@string/eight"
                        android:textSize="24sp"
                        />

                    <Button
                        android:id="@+id/b9"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.25"
                        android:text="@string/nine"
                        android:textSize="24sp"
                        />

                    <Button
                        android:id="@+id/plus"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.25"
                        android:text="@string/plus"
                        android:textSize="24sp"
                        />
                </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/dot"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:text="@string/dot"
                android:textSize="24sp" />

            <Button
                android:id="@+id/b0"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:baselineAligned="false"
                android:text="@string/zero"
                android:textSize="24sp" />

            <Button
                android:id="@+id/equals"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/eq"
                android:textSize="24sp"
                tools:ignore="NestedWeights" />


        </TableRow>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>